 * Bump Spark version to 1.6-SNAPSHOT and add Apache Snapshot repository to resolvers (SPARKC-272)

********************************************************************************

1.5.0 M3 (unreleased)
 * Added ColumRef child class to represent functions calls (SPARKC-280)
 * Warn if Keep_alive_ms is less than spark batch size in streaming (SPARKC-228)
 * Fixed real tests (SPARKC-247)
 * Added support for tinyint and smallint types (SPARKC-269)
 * Updated Java driver version to 3.0.0-alpha4; Codec API changes (SPARKC-285)
 * Updated Java driver version to 3.0.0-alpha3 (SPARKC-270)
 * Changed the way CassandraConnectorSource is obtained due to SPARK-7171 (SPARKC-268)
 * Change write ConsistencyLevel to LOCAL_QUORUM (SPARKC-262)
 * Parallelize integration tests (SPARKC-293)

1.5.0 M2
 * Bump Java Driver to 2.2.0-rc3, Guava to 16.0.1 and test against Cassandra 2.2.1 (SPARKC-229)
 * Includes all patches up to 1.4.0.

1.5.0 M1
 * Added ability to build against unreleased Spark versions (SPARKC-242)
 * Spark 1.5 initial integration (SPARKC-241)

********************************************************************************
 * Let UDTs be converted from GenericRows (SPARKC-271)
 * Map InetAddress and UUID to string and store it as StringType in Spark SQL (SPARKC-259)
 * VarInt Column is converted to decimal stored in Spark SQL (SPARKC-266)
 * Retrieve TableSize from Cassandra system table for datasource relation (SPARKC-164)
 * Fix merge strategy for netty.io.properties (SPARKC-249)
 * Upgrade integration tests to use Cassandra 2.1.9 and upgrade Java Driver 
   to 2.1.7.1, Spark to 1.4.1 (SPARKC-248)

1.4.0
 * Fixed broken integration tests (SPARKC-247):
   - Fixed Scala reflection race condition in TupleColumnMapper.
   - Fixed dev/run-real-tests script.
   - Fixed CheckpointStreamSpec test.

1.4.0 RC1
 * Added TTL and WRITETIME documentation (SPARKC-244)
 * Reduced the amount of unneccessary error logging in integration tests (SPARKC-223)