@@ -497,6 +497,20 @@ object TypeConverter {
     }
   }
 
+  class CassandraOptionConverter[T](implicit c: TypeConverter[T]) extends TypeConverter[CassandraOption[T]] {
+
+    @transient
+    lazy val targetTypeTag = TypeTag.synchronized{
+      implicit val itemTypeTag = c.targetTypeTag
+      implicitly[TypeTag[CassandraOption[T]]]
+    }
+
+    def convertPF = {
+      case null => CassandraOption.Unset[T]
+      case other => CassandraOption(Some(c.convert(other)))
+    }
+  }
+
   abstract class CollectionConverter[CC, T](implicit c: TypeConverter[T], bf: CanBuildFrom[T, CC])
     extends TypeConverter[CC] {
 
@@ -631,6 +645,9 @@ object TypeConverter {
     }
   }
 
+  implicit def cassandraOptionConverter[T : TypeConverter]: CassandraOptionConverter[T] =
+    new CassandraOptionConverter[T]
+
   implicit def optionConverter[T : TypeConverter]: OptionConverter[T] =
     new OptionConverter[T]
 
@@ -697,9 +714,18 @@ object TypeConverter {
 
     def targetTypeTag = implicitly[TypeTag[AnyRef]]
 
+    def cassandraOptionToAnyRef( cassandraOption: CassandraOption[_]) = {
+      cassandraOption.option match {
+        case Some(x) => nestedConverter.convert(x).asInstanceOf[AnyRef]
+        case None => if (cassandraOption.unsetIfNone == false) null else Unset
+      }
+    }
+
     def convertPF = {
+      case x: CassandraOption[_] => cassandraOptionToAnyRef(x)
       case Some(x) => nestedConverter.convert(x).asInstanceOf[AnyRef]
       case None => null
+      case Unset => Unset
       case x => nestedConverter.convert(x).asInstanceOf[AnyRef]
     }
   }
@@ -765,6 +791,7 @@ object TypeConverter {
         implicit val itemConverter = untypedItemConverter.asInstanceOf[TypeConverter[T]]
         implicit val ordering = orderingFor(arg).map(_.asInstanceOf[Ordering[T]]).orNull
         symbol match {
+          case CassandraOptionSymbol => cassandraOptionConverter[T]
           case OptionSymbol => optionConverter[T]
           case ListSymbol => listConverter[T]
           case VectorSymbol => vectorConverter[T]
