@@ -1,3 +1,4 @@
+ * Added CassandraOption for Skipping Columns when Writing to C* (SPARKC-283)
  * Bump Spark version to 1.6-SNAPSHOT and add Apache Snapshot repository to resolvers (SPARKC-272)
 
 ********************************************************************************
